# model_playground

./: .gitignore  .markdownlint.json  CLAUDE.md  README.md  TODO.md  docker-compose.yml  justfile  package-lock.json
.github/: copilot-instructions.md
.github/agents/: backend.agent.md  docs.agent.md  frontend.agent.md
backend/: .coverage  .env  .env.example  .envrc  Dockerfile  conftest.py  pyproject.toml
backend/Docker_files/: Dockerfile  docker-compose.yml
backend/apps/accounts/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_alter_customuser_managers_remove_customuser_username_and_more.py
backend/apps/pages/: apps.py  tasks.py  tests.py  urls.py  views.py
backend/apps/registry/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/apps/registry/migrations/: 0001_initial.py
backend/core/: __init__.py  celery.py  urls.py
backend/core/settings/: __init__.py  base.py  dev.py  prod.py  test.py
backend/django_react_template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: model-task-categories.md  monorepo-implementation-plan.md
docs/explanations/: architecture.md  auth-flow.md  webgpu-inference.md
docs/guides/: adding-a-model.md  celery_setup.md  local-setup.md  onboarding.md
docs/plans/: accounts-email-as-username.md  backend-celery.md  celery-full-implementation.md  claude-code-setup.md  frontend-ui-foundation.md  linear-model-training.md  mnist-training.md
docs/plans/completed/: celery-full-implementation.md  claude-code-setup.md  frontend-stack-modernization.md  frontend-upgrade.md  mnist-training.md  sidebar-task-taxonomy.md  webgpu-model-playground.md
docs/plans/in-progress/: audio-models-in-browser.md
docs/standards/: api-contracts.md  model-visualization.md
frontend/: .env  .npmrc  Dockerfile  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vite.config.ts.timestamp-1773473785602-e9d6faa4afc49.mjs
frontend/coverage/: clover.xml  coverage-final.json  index.html
frontend/coverage/src/: index.html  main.tsx.html  routeTree.gen.ts.html
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/api/: auth.test.ts  auth.ts  client.test.ts  client.ts  health.test.ts  health.ts  models.ts  queryKeys.ts  tasks.ts
frontend/src/audio/: asr.worker.ts  asrClient.ts  asrEngine.test.ts  asrEngine.ts  backend.test.ts  backend.ts  classification.ts  io.test.ts  io.ts  pipeline.worker.ts  pipelineClient.ts  pipelineEngine.test.ts  pipelineEngine.ts  pipelineTypes.ts  samples.test.ts  samples.ts  tts.ts  tts.worker.ts  ttsClient.ts  ttsEngine.test.ts  ttsEngine.ts  types.ts  waveform.test.ts  waveform.ts
frontend/src/components/: Markdown.tsx  TaskTrigger.test.tsx  TaskTrigger.tsx
frontend/src/hooks/: useAsr.test.ts  useAsr.ts  useAudioClassifier.test.ts  useAudioClassifier.ts  useAuth.test.tsx  useAuth.ts  useGpuBenchmark.ts  useLinearTraining.test.ts  useLinearTraining.ts  useLiveAsr.test.ts  useLiveAsr.ts  useModels.ts  usePipeline.test.ts  usePipeline.ts  useTaskPoller.test.ts  useTaskPoller.ts  useTensorOp.test.ts  useTensorOp.ts  useTheme.test.ts  useTheme.ts  useTts.test.ts  useTts.ts  useWebGPU.ts
frontend/src/lib/: browser.test.ts  browser.ts  date.test.ts  date.ts  format.test.ts  format.ts  matrix.test.ts  matrix.ts  mnist.test.ts  mnist.ts  mnistCache.test.ts  mnistCache.ts  theme.test.ts  theme.ts
frontend/src/routes/: __root.tsx  asr.tsx  audio-classification.tsx  demo.chart.tsx  home.tsx  index.tsx  login.tsx  playground.tsx  signup.tsx  tasks.$slug.tsx  tensor.tsx  text-to-speech.tsx  training.tsx
frontend/src/schemas/: auth.ts
(+121 files in other folders)
